--- a/index.html
+++ b/index.html
@@ -45,17 +45,24 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">GIF 2 photo/2names</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">PcBack (Photo private)</a>
+		<li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#education">Blink/Parpadeo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Fondos (Backgrounds)</a>
+            <a class="nav-link js-scroll-trigger" href="#education">Gif NO Photo</a>
+          </li>
+		<li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#education">Gif Halloween</a>
+          </li>
+		
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#skills">PcBack (Photo Private)</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Xatspace</a>
+            <a class="nav-link js-scroll-trigger" href="#interests">Fondos (Backgrounds)</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Gif NO Photo</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">XATSPACE</a>
           </li>
         </ul>
       </div>
@@ -72,40 +79,7 @@
             
           </div>
           <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-          <ul class="list-inline list-social-icons mb-0">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
+          
         </div>
       </section>
 
