--- a/index.html
+++ b/index.html
@@ -768,51 +768,53 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+          <h2 class="mb-5">Gif 2 Photo</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
-            </div>
-          </div>
+         </p><p style="text-align: center; "><b><span style="font-size: 34px;"><font color="#ffffff">Gif Models 2 photos or 2 names</font></span></b></p>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
-            </div>
-          </div>
+<table cellpadding="0" cellspacing="0" width="100%">
+ <tbody><tr>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Af496</b></font> <img src="https://i.imgur.com/W5nsSQp.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF495</b></font> <img src="https://i.imgur.com/sDAUYxl.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF494</b></font> <img src="https://i.imgur.com/HCd811S.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF493</b></font> <img src="https://i.imgur.com/gozWSlY.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF491</b></font> <img src="https://i.imgur.com/NKQszu2.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF492</b></font> <img src="https://i.imgur.com/uQX7VzA.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF480</b></font> <img src="https://i.imgur.com/ZRdqIXv.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>BT18</b></font> <img src="https://i.imgur.com/8XJGYik.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>BT22</b></font> <img src="https://i.imgur.com/Ob2R6Gv.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width:
+ 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>BT11</b></font> <img src="https://i.imgur.com/mzVvKDI.gif" style="font-size: 1rem;"> </div></td>
+ </tr>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
+ <tr>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt32</b></font> <img src="https://i.imgur.com/Z6Xd11L.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>BT33</b></font> <img src="https://i.imgur.com/nzBVUM1.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>BT42</b></font> <img src="https://i.imgur.com/YVBrGsH.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>BT54</b></font> <img src="https://i.imgur.com/vhqpgjj.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt89</b></font> <img src="https://i.imgur.com/3PYbrGi.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt125</b></font> <img src="https://i.imgur.com/Mizhe9E.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt168</b></font> <img src="https://i.imgur.com/X8RKLFk.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt171</b></font> <img src="https://i.imgur.com/kqFt1m9.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt1</b></font> <img src="https://i.imgur.com/4cYUlWZ.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt50</b></font> <img src="https://i.imgur.com/2Cr53Jn.gif" style="font-size: 1rem;"> </div></td>
+ </tr>
+<tr>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF265</b></font> <img src="https://i.imgur.com/bDz4ow1.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF266</b></font> <img src="https://i.imgur.com/6KX5P1V.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Af379</b></font> <img src="https://i.imgur.com/X67ARFY.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF368</b></font> <img src="https://i.imgur.com/tOJsL8Y.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF369</b></font> <img src="https://i.imgur.com/MOjmEGK.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF374</b></font> <img src="https://i.imgur.com/KWvYnGI.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF375</b></font> <img src="https://i.imgur.com/ZasQCUO.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF384</b></font> <img src="https://i.imgur.com/wMqnH4Q.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>G-19</b></font> <img src="https://img.xatblog.net/image/UZ9K8UseL.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>AF498</b></font> <img src="https://i.postimg.cc/DzNnqLJx/anigif.gif" style="font-size: 1rem;"> </div></td>
+	 </tr>
+	 
+</tbody></table>
+<p></p><p><br></p><p><br></p>
 
         </div>
 
