--- a/index.html
+++ b/index.html
@@ -822,30 +822,83 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+          <h2 class="mb-5">GIF NO Photo</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
-            </div>
-          </div>
+          </p><p style="text-align: center; "><b><font color="#ffffff"><span style="font-size: 34px;">Gif Models NO photos (only text!!)</span></font></b></p>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
-            </div>
-          </div>
+<table cellpadding="0" cellspacing="0" width="100%">
+ <tbody>
+<tr>
+ 
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt6</b></font> <img src="https://i.imgur.com/kPEg75v.gif" style="font-size: 1rem;"> </div></td>
+
+ 
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt21</b></font> <img src="https://i.imgur.com/IxR5riW.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>bt35</b></font> <img src="https://i.imgur.com/DysJU3x.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt39</b></font> <img src="https://i.imgur.com/vwSSaa9.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt41</b></font> <img src="https://i.imgur.com/1fEjYpP.gif" style="font-size: 1rem;"> </div></td>
+ </tr>
+
+
+ <tr>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt43</b></font> <img src="https://i.imgur.com/0Xji0Ng.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt61</b></font> <img src="https://i.imgur.com/1BrtmGj.gif" style="font-size: 1rem;"> </div></td>
+ 
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt71</b></font> <img src="https://i.imgur.com/WiJSLuV.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt72</b></font> <img src="https://i.imgur.com/9kYm3TB.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt74</b></font> <img src="https://i.imgur.com/wOYcUQ5.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt81</b></font> <img src="https://i.imgur.com/qVsazne.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt82</b></font> <img src="https://i.imgur.com/5rOuBr5.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt83</b></font> <img src="https://i.imgur.com/DDmlwKB.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt90</b></font> <img src="https://i.imgur.com/QvEHnEv.gif" style="font-size: 1rem;"> </div></td>
+ </tr>
+<tr>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt98</b></font> <img src="https://i.imgur.com/sTXH2zf.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt101</b></font> <img src="https://i.imgur.com/lnsEUTl.gif" style="font-size: 1rem;"> </div></td>
+
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt103</b></font> <img src="https://i.imgur.com/XXe8Z8V.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt104</b></font> <img src="https://i.imgur.com/psIzIqI.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt106</b></font> <img src="https://i.imgur.com/PD8qJ7r.gif" style="font-size: 1rem;">
+ </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt107</b></font> <img src="https://i.imgur.com/AkPGFwA.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt108</b></font> <img src="https://i.imgur.com/5pOBl0O.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt110</b></font> <img src="https://i.imgur.com/owIVzlC.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt113</b></font> <img src="https://i.imgur.com/YoTfReF.gif" style="font-size: 1rem;"> </div></td>
+ </tr>
+<tr>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt114</b></font> <img src="https://i.imgur.com/EIZl6xu.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt116</b></font> <img src="https://i.imgur.com/W2Edh69.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt118</b></font> <img src="https://i.imgur.com/e8ewp5w.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt119</b></font> <img src="https://i.imgur.com/aouXOBL.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt123</b></font> <img src="https://i.imgur.com/v5SOYHi.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt127</b></font> <img src="https://i.imgur.com/rVj1B7w.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt128</b></font> <img src="https://i.imgur.com/w3M3EpH.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt141</b></font> <img src="https://i.imgur.com/8uYTl6N.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt143</b></font> <img src="https://i.imgur.com/IJM7uLl.gif" style="font-size: 1rem;"> </div></td>
+ 
+ </tr>
+<tr>
+ 
+
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt158</b></font> <img src="https://i.imgur.com/Q3v4Csh.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt175</b></font> <img src="https://i.imgur.com/73Dk52a.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt176</b></font> <img src="https://i.imgur.com/2Wc2brG.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt177</b></font> <img src="https://i.imgur.com/9SrHlJW.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt179</b></font> <img src="https://i.imgur.com/qQIShFs.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt182</b></font> <img src="https://i.imgur.com/dqqEjcQ.gif" style="font-size: 1rem;"> </div></td>
+ </tr>
+<tr>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt183</b></font> <img src="https://i.imgur.com/oGP6X1H.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt184</b></font> <img src="https://i.imgur.com/rpobkGZ.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt185</b></font> <img src="https://i.imgur.com/xDxb2UH.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt186</b></font> <img src="https://i.imgur.com/sIc4EUH.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt187</b></font> <img src="https://i.imgur.com/ab4PQuC.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt189</b></font> <img src="https://i.imgur.com/NwdOEba.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt191</b></font> <img src="https://i.imgur.com/eY3jSl2.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt193</b></font> <img src="https://i.imgur.com/ywTJUrM.gif" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#E43512"><b>Bt195</b></font> <img src="https://i.imgur.com/34xabI3.gif" style="font-size: 1rem;"> </div></td>
+ 
+
 
         </div>
       </section>
