--- a/index.html
+++ b/index.html
@@ -52,10 +52,19 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Blink(Parpadeo)</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">PcBack</a>
+            <a class="nav-link js-scroll-trigger" href="#interests">Gif Halloween</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Fondos</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">Gif Christmas</a>
+          </li>
+		<li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="">PcBack (Photo Private)</a>
+          </li>
+		<li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="">Fondos (Backgrounds)</a>
+          </li>
+		<li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="">XATSPACE</a>
           </li>
         </ul>
       </div>
