--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             <a class="nav-link js-scroll-trigger" href="#awards">Gif Christmas</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="">PcBack (Photo Private)</a>
+            <a class="nav-link js-scroll-trigger" href="https://flic.kr/s/aHBqjzxT7k">PcBack (Photo Private)</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="">Fondos (Backgrounds)</a>
+            <a class="nav-link js-scroll-trigger" href="https://flic.kr/s/aHBqjzxTnK">Fondos (Backgrounds)</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="">XATSPACE</a>
+            <a class="nav-link js-scroll-trigger" href="https://imgur.com/a/zGYOd9u">XATSPACE</a>
           </li>
         </ul>
       </div>
