--- a/index.html
+++ b/index.html
@@ -1030,11 +1030,19 @@
    <td><div style="text-align:center; width: 100px; height: 120px; background-color:#BF00FF; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>Bt14</b></font> <img src="https://i.imgur.com/PVm6GWQ.gif" style="font-size: 1rem;"> </div></td>
    <td><div style="text-align: center; width: 100px; height: 120px; background-color:#BF00FF; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>Bt9</b></font> <img src="https://i.imgur.com/whC3XNp.gif" style="font-size: 1rem;"> </div></td>
     <td><div style="text-align: center; width: 100px; height: 120px; background-color:#BF00FF; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>Btnew</b></font> <img src="https://i.postimg.cc/xT8tb4Z3/anigif.gif" style="font-size: 1rem;"> </div></td>
-   <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>G-25</b></font> <img src="https://img.xatblog.net/image/qFsqrrgDM.gif" style="font-size: 1rem;"> </div></td>
-
+   </tr>
+	
+	<tr>
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>G-25</b></font> <img src="https://img.xatblog.net/image/qFsqrrgDM.gif" style="font-size: 1rem;"> </div></td>
 <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>G-26</b></font> <img src="https://img.xatblog.net/image/6u9RslKTv1B.gif" style="font-size: 1rem;"> </div></td>
- 
-   </tr> 
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>Ch-1</b></font> <img src="" style="font-size: 1rem;"> </div></td>
+ <td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>Ch-2</b></font> <img src="" style="font-size: 1rem;"> </div></td>
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>Ch-3</b></font> <img src="" style="font-size: 1rem;"> </div></td>
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>Ch-4</b></font> <img src="" style="font-size: 1rem;"> </div></td>
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>Ch-5</b></font> <img src="" style="font-size: 1rem;"> </div></td>
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#12C7E4; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>Ch-6</b></font> <img src="" style="font-size: 1rem;"> </div></td>
+	
+	</tr>
     </tbody>
    </table>
  
