--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Welcome to 
-            <span class="text-primary"> Sephiroth's Gallery!</span>
+          <h1 class="mb-0">Sephiroth's Gallery 
+            <span class="text-primary"> (70007000) </span>
           </h1>
+         <h2 class="mb-5">Click Sidebar menu to pick the category you need.</h2>
          
            
  <table cellpadding="0" cellspacing="0" width="100%" > 
@@ -1067,7 +1068,9 @@
       </section>
 
     </div>
-
+	
+h2 class="mb-5">All right reserved for this Gallery Theme to Sephiroth (iSephir007- 70007000) Do not copy without permission! </h2>
+	
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
