--- a/index.html
+++ b/index.html
@@ -1064,13 +1064,13 @@
    </table>
  
 	
+	
         </div>
       </section>
-
+<h2 class="mb-5">All right reserved for this Gallery Theme to Sephiroth (iSephir007- 70007000) Do not copy without permission! </h2>
+<h2 class="mb-5">Using Any part of this Theme on your xatspace, without my permission, WILL result in REPORT and Block for your xatspace. Thank you!  </h2>
     </div>
-	
-h2 class="mb-5">All right reserved for this Gallery Theme to Sephiroth (iSephir007- 70007000) Do not copy without permission! </h2>
-h2 class="mb-5">Using Any part of this Theme on your xatspace, without my permission, WILL result in REPORT and Block for your xatspace. Thank you!  </h2>
+
 	
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
