--- a/index.html
+++ b/index.html
@@ -30,6 +30,30 @@
     <link href="css/resume.min.css" rel="stylesheet">
 
   </head>
+	
+<div class="banner"> 
+<img src=".gif" /> </div>
+   
+ <div class="bottom"> <div class="container"> <div class="user"> <img src=".gif" /> </div> 
+
+
+<div class="navigator"> 
+<a class="btn-nav" href="https://xat.me/sephirroth">
+
+<p> 𝐌𝐞𝐬𝐬𝐚𝐠𝐞 𝐦𝐞 𝐟𝐨𝐫 𝐅𝐨𝐧𝐝𝐨𝐬 𝐆𝐚𝐥𝐥𝐞𝐫𝐲, 𝐏𝐜𝐁𝐚𝐜𝐤 𝐠𝐚𝐥𝐥𝐞𝐫𝐲, 𝐗𝐚𝐭𝐬𝐩𝐚𝐜𝐞 𝐆𝐚𝐥𝐥𝐞𝐫𝐲 </p> 
+</a> 
+
+
+
+
+<span></span> 
+<p></p> 
+</a> 
+</div> 
+</div> 
+</div> 
+</div> 
+<div class="content"> 	
 
   <body id="page-top">
 	  
