--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
     <link href="css/resume.min.css" rel="stylesheet">
 
   </head>
-	
+
+<div id="NotAllowedme">
+<div id="main"> 
+<div class="header"> 
+<div class="btn"> 
+
+</div> 
 <div class="banner"> 
 <img src=".gif" /> </div>
    
@@ -54,6 +60,7 @@
 </div> 
 </div> 
 <div class="content"> 	
+
 
   <body id="page-top">
 	  
