--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
 
   </head>
 
+
 <div id="NotAllowedme">
 <div id="main"> 
+<div id="-sp_1"> 
+<div id="-sp_2"> 
+<div class="app"> 
 <div class="header"> 
 <div class="btn"> 
 
