--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
 
 </div> 
 <div class="banner"> 
-<img src=".gif" /> </div>
-   
- <div class="bottom"> <div class="container"> <div class="user"> <img src=".gif" /> </div> 
-
+<img src="https://i.imgur.com/aDA01g3.gif" /> </div> </div>
 
 <div class="navigator"> 
 <a class="btn-nav" href="https://xat.me/sephirroth">
