--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 <div class="navigator"> 
 <a class="btn-nav" href="https://xat.me/sephirroth">
 
-<p> 𝐌𝐞𝐬𝐬𝐚𝐠𝐞 𝐦𝐞 𝐟𝐨𝐫 𝐅𝐨𝐧𝐝𝐨𝐬 𝐆𝐚𝐥𝐥𝐞𝐫𝐲, 𝐏𝐜𝐁𝐚𝐜𝐤 𝐠𝐚𝐥𝐥𝐞𝐫𝐲, 𝐗𝐚𝐭𝐬𝐩𝐚𝐜𝐞 𝐆𝐚𝐥𝐥𝐞𝐫𝐲 </p> 
-</a> 
+
 
 
 
@@ -1109,8 +1108,8 @@
 	
         </div>
       </section>
-<h2 class="mb-5">All right reserved for this Gallery Theme to Sephiroth (iSephir007- 70007000) Do not copy without permission! </h2>
-<h2 class="mb-5">Using Any part of this Theme on your xatspace, without my permission, WILL result in REPORT and Block for your xatspace. Thank you!  </h2>
+<h2> All right reserved for this Gallery Theme to Sephiroth (iSephir007- 70007000) Do not copy without permission! </h2>
+<h2> Using Any part of this Theme on your xatspace, without my permission, WILL result in REPORT and Block for your xatspace. Thank you!  </h2>
     </div>
 
 	
