--- a/index.html
+++ b/index.html
@@ -115,10 +115,9 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Sephiroth's Gallery 
-            <span class="text-primary"> (70007000) </span>
-          </h1>
-         <h2 class="mb-5">Click Sidebar menu to pick the category you need.</h2>
+		
+   <h2 class="mb-5">Sephiroth's Gallery</h2>
+		<p> iSephir-70007000 </p>
          
            
  <table cellpadding="0" cellspacing="0" width="100%" > 
