--- a/index.html
+++ b/index.html
@@ -1102,8 +1102,8 @@
       </section>
 
     </div>
-<h2> All right reserved for this Gallery Theme to Sephiroth (iSephir007- 70007000) Do not copy without permission! </h2>
-<h2> Using Any part of this Theme on your xatspace, without my permission, WILL result in REPORT and Block for your xatspace. Thank you!  </h2>
+<p> All right reserved for this Gallery Theme to Sephiroth (iSephir007- 70007000) Do not copy without permission! </p>
+<p> Using Any part of this Theme on your xatspace, without my permission, WILL result in REPORT and Block for your xatspace. Thank you!  </p>
 	
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
