--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
 		
-   <h2 class="mb-5">Sephiroth's Gallery</h2>
-		<p> iSephir-70007000 </p>
+   <h2 class="mb-5">Sephiroth's Gallery (70007000) </h2>
+		
          
            
  <table cellpadding="0" cellspacing="0" width="100%" > 
