--- a/index.html
+++ b/index.html
@@ -1102,6 +1102,7 @@
       </section>
 
     </div>
+ <p style="font-size:160%; color:red;" >This is a paragraph.</p>
 <p> All right reserved for this Gallery Theme to Sephiroth (iSephir007- 70007000) Do not copy without permission! </p>
 <p> Using Any part of this Theme on your xatspace, without my permission, WILL result in REPORT and Block for your xatspace. Thank you!  </p>
 	
