--- a/index.html
+++ b/index.html
@@ -116,9 +116,22 @@
  <table cellpadding="0" cellspacing="0" width="100%" > 
  <table style="border:1px solid black;margin-left:auto;margin-right:auto;">
 
-   <tbody><tr>
+   <tbody>
+<tr>  
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>NEW-29</b></font> <img src="https://img.xatblog.net/image/8awhMvtU04.gif" style="font-size: 1rem;"> </div></td>
+
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>NEW-30</b></font> <img src="https://img.xatblog.net/image/ZiGJw54nb.gif" style="font-size: 1rem;"> </div></td>
+
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>NEW-31</b></font> <img src="https://img.xatblog.net/image/lc9BF1iAo.gif" style="font-size: 1rem;"> </div></td>
+
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>NEW-32</b></font> <img src="https://img.xatblog.net/image/fXM8vQ1CTLS.gif" style="font-size: 1rem;"> </div></td>
+
+	
+</tr> 	
+	
+	
 	   
-   
+<tr>  
 <td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>NEW-10</b></font> <img src="https://i.postimg.cc/gJkqCdQn/anigif.gif" style="font-size: 1rem;"> </div></td>
 
 <td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>NEW-11</b></font> <img src="https://i.postimg.cc/MH4GWbGh/anigif1.gif" style="font-size: 1rem;"> </div></td>
