--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
     </tbody>
    </table>
  
-	
+<td><a href="" target="_blank"><div style="text-align: center; width: 200px; height: 240px; background-color:#B22222; border: 3px solid rgb(255, 255, 255);"><font color="#FFFFFF"><b>Text2</b></font> <embed src="https://img.xatblog.net/image/qmqQJa0Orii.jpg" allowfullscreen="true" width="160" height="180"> </div></a></td>	
 	
         </div>
       </section>
