--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 		<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://imgur.com/a/zGYOd9u">XATSPACE</a>
           </li>
+		<li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="...">Photoshop 3D Texts</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -1109,7 +1112,6 @@
     </tbody>
    </table>
  
-<td><a href="" target="_blank"><div style="text-align: center; width: 200px; height: 240px; background-color:#B22222; border: 3px solid rgb(255, 255, 255);"><font color="#FFFFFF"><b>Text2</b></font> <embed src="https://img.xatblog.net/image/qmqQJa0Orii.jpg" allowfullscreen="true" width="160" height="180"> </div></a></td>	
 	
         </div>
       </section>
