--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
             <a class="nav-link js-scroll-trigger" href="#awards">Gif Christmas</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" target="_blank href="https://flic.kr/s/aHBqjzxT7k">PcBack (Photo Private)</a>
+            <a class="nav-link js-scroll-trigger" target="_blank" href="https://flic.kr/s/aHBqjzxT7k">PcBack (Photo Private)</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" target="_blank href="https://flic.kr/s/aHBqjzxTnK">Fondos (Backgrounds)</a>
+            <a class="nav-link js-scroll-trigger" target="_blank" href="https://flic.kr/s/aHBqjzxTnK">Fondos (Backgrounds)</a>
           </li>
 		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" target="_blank href="https://imgur.com/a/zGYOd9u">XATSPACE</a>
+            <a class="nav-link js-scroll-trigger" target="_blank" href="https://imgur.com/a/zGYOd9u">XATSPACE</a>
           </li>
 		<li class="nav-item">
             <a class="nav-link js-scroll-trigger" target="_blank" href="https://flic.kr/s/aHBqjzACSc">Photoshop 3D Texts</a>
