--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>V-12</b></font> <img src="https://img.xatblog.net/image/VKYYK5Kk7Z.gif" style="font-size: 1rem;"> </div></td>
 
-<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>V-13</b></font> <img src=" " style="font-size: 1rem;"> </div></td>
+<td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>V-13</b></font> <img src="https://img.xatblog.net/image/4ZNtKjd9Iu.gif" style="font-size: 1rem;"> </div></td>
 
 <td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>V-14</b></font> <img src=" " style="font-size: 1rem;"> </div></td>
 <td><div style="text-align: center; width: 100px; height: 120px; background-color:#C0E7F9; border: 3px solid rgb(255, 255, 255);"><font color="#111111"><b>V-15</b></font> <img src=" " style="font-size: 1rem;"> </div></td>
