--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
 		<li class="nav-item">
             <a class="nav-link js-scroll-trigger" target="_blank" href="">XATSPACE</a>
           </li>
+		
+<div class="subnav">
+    <button class="subnavbtn">Partners <i class="fa fa-caret-down"></i></button>
+    <div class="subnav-content">
+      <a href="#link1">Link 1</a>
+      <a href="#link2">Link 2</a>
+      <a href="#link3">Link 3</a>
+      <a href="#link4">Link 4</a>
+    </div>
+  </div>
+			
 		<li class="nav-item">
             <a class="nav-link js-scroll-trigger" target="_blank" href="https://flic.kr/s/aHBqjzACSc">Photoshop 3D Texts</a>
 		
