--- a/index.html
+++ b/index.html
@@ -71,11 +71,22 @@
       </a>
 	<h2 class="mb-5">MENU GALLERY </h2>    
 	    
+	    
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
+		
+		  <ul><li>Xatspaces
+ <ul>
+  <li>Xat1</li>
+  <li>Xat2</li>
+   <li>Xat3</li>
+  </ul>
+</li></ul> 	
+		
+		
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">GIF 1 PHOTO</a>
           </li>
@@ -103,16 +114,6 @@
 		<li class="nav-item">
             <a class="nav-link js-scroll-trigger" target="_blank" href="">XATSPACE</a>
           </li>
-		
-<div class="subnav">
-    <button class="subnavbtn">Partners <i class="fa fa-caret-down"></i></button>
-    <div class="subnav-content">
-      <a href="#link1">Link 1</a>
-      <a href="#link2">Link 2</a>
-      <a href="#link3">Link 3</a>
-      <a href="#link4">Link 4</a>
-    </div>
-  </div>
 			
 		<li class="nav-item">
             <a class="nav-link js-scroll-trigger" target="_blank" href="https://flic.kr/s/aHBqjzACSc">Photoshop 3D Texts</a>
@@ -121,6 +122,13 @@
         </ul>
       </div>
     </nav>
+	  
+	
+	  
+
+	  
+	  
+	  
 
     <div class="container-fluid p-0">
 
